# hackager

./: .travis.yml  Build.hs  CHANGELOG.md  HACKING.md  HackageTestMonad.hs  LICENSE  README.md  README.txt  TODO.md  Utils.hs  hackage-test-compare.hs  hackage-test.cabal  hackage-test.hs  hackager.cabal
src/: Build.hs  BuildManager.hs  BuildTools.hs  HackageMonad.hs  HackageTest.hs  Hackager.hs  HackagerReport.hs  Parallel.hs  Record.hs  RecordOptions.hs  Report.hs  Utils.hs  Version.hs
