Name:               hackage-test
Version:            0.1
Synopsis:           Hackage test
Description:
    Hackage test.
License:            BSD3
License-File:       LICENSE
Build-type:         Simple
Cabal-Version:      >= 1.6

Executable hackage-test
    Main-Is: hackage-test.hs
    ghc-options: -threaded
    ghc-options: -Wall
    if impl(ghc >= 6.8)
      ghc-options: -fwarn-tabs

    build-depends: base     >= 2        && < 5,
                   Cabal,
                   containers,
                   directory,
                   filepath,
                   mtl,
                   process

Executable hackage-test-compare
    Main-Is: hackage-test-compare.hs
    ghc-options: -threaded
    ghc-options: -Wall
    if impl(ghc >= 6.8)
      ghc-options: -fwarn-tabs

    build-depends: base     >= 2        && < 5,
                   containers,
                   filepath

