name:               hackage-test
Version:            0.2
Synopsis:           Hackage Test
Description:
    Hackage test is a program for compiling the entirety of Hackage as a way of
    testing a Haskell compiler.
License:            BSD3
License-File:       LICENSE
Build-type:         Simple
Cabal-Version:      >= 1.6

Executable HackageTest
    Main-Is: HackageTest.hs
    HS-Source-Dirs: src
    Ghc-Options: -threaded -Wall -Werror
    Build-Depends: base        >= 2 && < 5,
                   Cabal,
                   containers,
                   directory,
                   filepath,
                   mtl,
                   process

Executable hackage-test-compare
    Main-Is: hackage-test-compare.hs
    HS-Source-Dirs: src
    Ghc-Options: -threaded -Wall -Werror
    Build-Depends: base        >= 2 && < 5,
                   containers,
                   filepath

