Name:               Hackager
Version:            0.2
Synopsis:           Hackage testing tool
Description:
    Hackager is a program for compiling the entirety of Hackage as a way of
    testing a Haskell compiler.
Author:             The GHC Team 
Maintainer:         David Terei <dave.terei@gmail.com>
License:            BSD3
License-File:       LICENSE
Build-type:         Simple
Stability:          Stable
Extra-Source-Files: README.md
Cabal-Version:      >= 1.6

Executable hackager
    Main-Is: Hackager.hs
    HS-Source-Dirs: src
    Ghc-Options: -threaded -Wall -Werror
    Build-Depends: base        >= 2 && < 5,
                   Cabal,
                   containers,
                   directory,
                   filepath,
                   mtl,
                   process

